@@ -1,0 +1,5 @@
+#!/usr/bin/env python
+# -*- coding: UTF-8 -*-
+from resources.lib import main
+
+main.run()
