@@ -1,139 +1,0 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<scraper framework="1.1" date="2012-01-16">
-	<CreateSearchUrl dest="3">
-		<RegExp input="$$1" output="&lt;url&gt;https://api.tmdb.org/3/search/movie?api_key=ecbc86c92da237cb9faff6d3ddc4be6d&amp;amp;query=\1&amp;amp;year=$$4&amp;amp;language=$INFO[language]&lt;/url&gt;" dest="3">
-			<RegExp input="$$2" output="\1" dest="4">
-				<expression clear="yes">(.+)</expression>
-			</RegExp>
-			<expression noclean="1" />
-		</RegExp>
-	</CreateSearchUrl>
-	<NfoUrl dest="3">
-		<RegExp input="$$1" output="&lt;details&gt;&lt;url&gt;https://api.tmdb.org/3/movie/\2?api_key=ecbc86c92da237cb9faff6d3ddc4be6d&amp;amp;language=$INFO[language]&lt;/url&gt;&lt;id&gt;\2&lt;/id&gt;&lt;/details&gt;" dest="3">
-			<expression clear="yes" noclean="1">(themoviedb.org/movie/)([0-9]*)</expression>
-		</RegExp>
-		<RegExp input="$$1" output="&lt;details&gt;&lt;url cache=&quot;tmdb-$INFO[language]-tt\1.json&quot;&gt;https://api.tmdb.org/3/movie/tt\1?api_key=ecbc86c92da237cb9faff6d3ddc4be6d&amp;amp;language=$INFO[language]&lt;/url&gt;&lt;id&gt;tt\1&lt;/id&gt;&lt;/details&gt;" dest="3">
-			<expression>imdb....?/title/tt([0-9]+)</expression>
-		</RegExp>
-		<RegExp input="$$1" output="&lt;details&gt;&lt;url cache=&quot;tmdb-$INFO[language]-tt\1.json&quot;&gt;https://api.tmdb.org/3/movie/tt\1?api_key=ecbc86c92da237cb9faff6d3ddc4be6d&amp;amp;language=$INFO[language]&lt;/url&gt;&lt;id&gt;tt\1&lt;/id&gt;&lt;/details&gt;" dest="3">
-			<expression>imdb....?/Title\?t{0,2}([0-9]+)</expression>
-		</RegExp>
-	</NfoUrl>
-	<GetSearchResults dest="8">
-		<RegExp input="$$3" output="&lt;results&gt;\1&lt;/results&gt;" dest="8">
-			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\3&lt;/title&gt;&lt;id&gt;\2&lt;/id&gt;&lt;year&gt;\1&lt;/year&gt;&lt;url cache=&quot;tmdb-$INFO[language]-\2.json&quot;&gt;https://api.tmdb.org/3/movie/\2?api_key=ecbc86c92da237cb9faff6d3ddc4be6d&amp;amp;language=$INFO[language]&lt;/url&gt;&lt;/entity&gt;" dest="3">
-				<expression repeat="yes">&quot;release_date&quot;:&quot;([0-9]+)-.*?&quot;id&quot;:([0-9]*),&quot;original_title&quot;:&quot;[^&quot;]*&quot;,&quot;original_language&quot;:&quot;[^&quot;]*&quot;,&quot;title&quot;:&quot;([^&quot;]*)&quot;</expression>
-			</RegExp>
-			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\3&lt;/title&gt;&lt;id&gt;\2&lt;/id&gt;&lt;year&gt;\1&lt;/year&gt;&lt;url cache=&quot;tmdb-$INFO[language]-\2.json&quot;&gt;https://api.tmdb.org/3/movie/\2?api_key=ecbc86c92da237cb9faff6d3ddc4be6d&amp;amp;language=$INFO[language]&lt;/url&gt;&lt;/entity&gt;" dest="3+">
-				<expression repeat="yes">&quot;release_date&quot;:&quot;([0-9]+)-.*?&quot;id&quot;:([0-9]*),&quot;original_title&quot;:&quot;([^&quot;]*)&quot;,&quot;original_language&quot;:&quot;[^&quot;]*&quot;</expression>
-			</RegExp>
-			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2&lt;/title&gt;&lt;id&gt;\1&lt;/id&gt;&lt;url cache=&quot;tmdb-$INFO[language]-\1.json&quot;&gt;https://api.tmdb.org/3/movie/\1?api_key=ecbc86c92da237cb9faff6d3ddc4be6d&amp;amp;language=$INFO[language]&lt;/url&gt;&lt;/entity&gt;" dest="3+">
-				<expression repeat="yes">&quot;release_date&quot;:null.*?&quot;id&quot;:([0-9]*),&quot;original_title&quot;:&quot;([^&quot;]*)&quot;,&quot;original_language&quot;:&quot;[^&quot;]*&quot;</expression>
-			</RegExp>
-			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2&lt;/title&gt;&lt;id&gt;\1&lt;/id&gt;&lt;year&gt;\3&lt;/year&gt;&lt;url cache=&quot;tmdb-$INFO[language]-\1.json&quot;&gt;https://api.tmdb.org/3/movie/\1?api_key=ecbc86c92da237cb9faff6d3ddc4be6d&amp;amp;language=$INFO[language]&lt;/url&gt;&lt;/entity&gt;" dest="3+">
-				<expression repeat="yes">&quot;id&quot;:([0-9]*).*?title&quot;:&quot;[^&quot;]*&quot;.*?original_title&quot;:&quot;([^&quot;]*)&quot;.*?&quot;release_date&quot;:&quot;([0-9]+)-</expression>
-			</RegExp>
-			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2&lt;/title&gt;&lt;id&gt;\1&lt;/id&gt;&lt;year&gt;\3&lt;/year&gt;&lt;url cache=&quot;tmdb-$INFO[language]-\1.json&quot;&gt;https://api.tmdb.org/3/movie/\1?api_key=ecbc86c92da237cb9faff6d3ddc4be6d&amp;amp;language=$INFO[language]&lt;/url&gt;&lt;/entity&gt;" dest="3+">
-				<expression repeat="yes">&quot;id&quot;:([0-9]*).*?title&quot;:&quot;([^&quot;]*)&quot;.*?original_title&quot;:&quot;[^&quot;]*&quot;.*?&quot;release_date&quot;:&quot;([0-9]+)-</expression>
-			</RegExp>
-			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2&lt;/title&gt;&lt;id&gt;\1&lt;/id&gt;&lt;url cache=&quot;tmdb-$INFO[language]-\1.json&quot;&gt;https://api.tmdb.org/3/movie/\1?api_key=ecbc86c92da237cb9faff6d3ddc4be6d&amp;amp;language=$INFO[language]&lt;/url&gt;&lt;/entity&gt;" dest="3+">
-				<expression repeat="yes">&quot;id&quot;:([0-9]*).*?title&quot;:&quot;([^&quot;]*)&quot;.*?original_title&quot;:&quot;[^&quot;]*&quot;.*?&quot;release_date&quot;:null</expression>
-			</RegExp>
-			<expression noclean="1" />
-		</RegExp>
-	</GetSearchResults>
-	<GetDetails dest="3">
-		<RegExp input="$$5" output="&lt;details&gt;\1&lt;/details&gt;" dest="3">
-			<RegExp input="$$1" output="&lt;uniqueid type=&quot;tmdb&quot; default=&quot;true&quot;&gt;$$2&lt;/uniqueid&gt;" dest="5">
-				<expression/>
-			</RegExp>
-			<RegExp input="$$1" output="\1" dest="11">
-				<expression clear="yes" noclean="1">&quot;id&quot;:[0-9]*,&quot;imdb_id&quot;:&quot;([^&quot;]*)</expression>
-			</RegExp>
-			<RegExp input="$$11" output="&lt;uniqueid type=&quot;imdb&quot;&gt;\1&lt;/uniqueid&gt;" dest="5+">
-				<expression>(.+)</expression>
-			</RegExp>
-			<RegExp input="$$1" output="\1" dest="9">
-				<expression fixchars="1">&quot;original_title&quot;:&quot;([^&quot;]*)</expression>
-			</RegExp>
-			<RegExp conditional="keeporiginaltitle" input="$$9" output="&lt;title&gt;\1&lt;/title&gt;" dest="5+">
-				<expression/>
-			</RegExp>
-			<RegExp conditional="!keeporiginaltitle" input="$$2" output="&lt;chain function=&quot;GetTMDBTitleByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<RegExp input="$$9" output="&lt;originaltitle&gt;\1&lt;/originaltitle&gt;" dest="5+">
-				<expression/>
-			</RegExp>
-			<RegExp input="$$1" output="&lt;year&gt;\1&lt;/year&gt;" dest="5+">
-				<expression noclean="1">&quot;release_date&quot;:&quot;([0-9]+)-</expression>
-			</RegExp>
-			<RegExp input="$$1" output="&lt;premiered&gt;\1&lt;/premiered&gt;" dest="5+">
-				<expression noclean="1">&quot;release_date&quot;:&quot;([^&quot;]*)</expression>
-			</RegExp>
-			<RegExp input="$$1" output="\1" dest="10">
-				<expression clear="yes" noclean="1">&quot;runtime&quot;:([0-9]+)</expression>
-			</RegExp>
-			<RegExp input="$$10" output="&lt;url function=&quot;ParseFallbackTMDBRuntime&quot; cache=&quot;tmdb-en-$$2.json&quot;&gt;https://api.tmdb.org/3/movie/$$2?api_key=ecbc86c92da237cb9faff6d3ddc4be6d&amp;amp;language=en&lt;/url&gt;" dest="5+">
-				<expression>^$</expression>
-			</RegExp>
-			<RegExp input="$$10" output="&lt;runtime&gt;\1&lt;/runtime&gt;" dest="5+">
-				<expression>(.+)</expression>
-			</RegExp>
-			<RegExp input="$$11|$INFO[RatingS]|default|$INFO[imdbanyway]" output="&lt;chain function=&quot;GetIMDBRatingsById&quot;&gt;$$11\1&lt;/chain&gt;" dest="5+">
-				<expression>tt[0-9]+\|(?:IMDb(\|default)|.*true$)</expression>
-			</RegExp>
-			<RegExp input="$INFO[RatingS]|default" output="&lt;chain function=&quot;GetTMDBRatingsByIdChain&quot;&gt;$$2\1&lt;/chain&gt;" dest="5+">
-				<expression>TMDb(\|default)|.*</expression>
-			</RegExp>
-			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBStudioByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBCountryByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBDirectorsByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBWitersByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBCertificationsByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBSetByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBPlotByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBTaglineByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBCastByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBGenresByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBThumbsByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<RegExp conditional="fanart" input="$$2" output="&lt;chain function=&quot;GetTMDBFanartByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<RegExp conditional="trailer" input="$$2" output="&lt;chain function=&quot;GetTMDBTrailerByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
-				<expression />
-			</RegExp>
-			<expression noclean="1" />
-		</RegExp>
-	</GetDetails>
-	<ParseFallbackTMDBRuntime dest="5">
-		<RegExp input="$$2" output="&lt;details&gt;\1&lt;/details&gt;" dest="5">
-			<RegExp input="$$1" output="&lt;runtime&gt;\1&lt;/runtime&gt;" dest="2">
-				<expression noclean="1">&quot;runtime&quot;:([0-9]+)</expression>
-			</RegExp>
-			<expression noclean="1" />
-		</RegExp>
-	</ParseFallbackTMDBRuntime>
-</scraper>
